reimplementation/adl2/crates/adl-sema/tests/snapshots/golden/hir__define_under_or.snap
---
source: crates/adl-sema/tests/snapshots.rs
expression: hir_dump(&hir)
---
unit: define_under_or.adl
== objects ==
object MET -> C0#MET  (pure rename of C0#MET)
== defines ==
define lowmet [boolean] = (MET.pt < 100)
== regions ==
region SR_a
  select ((MET.pt < 100) or (MET.pt > 500))
region SR_b
  select (MET.pt > 150)
  select (MET.pt < 400)
== diagnostics ==
