reimplementation/adl2/crates/adl-sema/tests/snapshots/golden/hir__independent_jet_index.snap
---
source: crates/adl-sema/tests/snapshots.rs
expression: hir_dump(&hir)
---
unit: independent_jet_index.adl
== objects ==
object jets -> C1#jets
== defines ==
== regions ==
region SR_lead_high
  select (C1#jets[0].pt > 300)
region SR_sub_low
  select (C1#jets[1].pt < 200)
== diagnostics ==
