reimplementation/adl2/crates/adl-sema/tests/snapshots/golden/hir__overlap_met.snap
---
source: crates/adl-sema/tests/snapshots.rs
expression: hir_dump(&hir)
---
unit: overlap_met.adl
== objects ==
object MET -> C0#MET  (pure rename of C0#MET)
== defines ==
== regions ==
region SR1
  select (MET.pt > 200)
region SR2
  select (MET.pt > 150)
  select (MET.pt < 400)
== diagnostics ==
